edited main handlebars

--- a/Main/views/layout/main.handlebars
+++ b/Main/views/layout/main.handlebars
@@ -10,20 +10,19 @@
 </head>
 
 <body>
-  <header>
+  <header class="hero">
     <h1>The Tech Blog</h1>
   </header>
   <nav>
     <a href="/">Homepage</a>
   </nav>
   <main>
-    <aside>
       <h2>Tech Blog</h2>
-    </aside>
     <div class="events">
       {{{body}}}
     </div>
   </main>
+  <script src="../../public/js/logout.js"></script>
 </body>
 
 </html>
